force-app/main/default/objects/Advertiser_Publisher_Relationship__c/Advertiser_Publisher_Relationship__c.object-meta.xml
<CustomObject>
    <label>Advertiser/Publisher Relationship</label>
    <nameField>
        <displayFormat>APR-{000000}</displayFormat>
        <label>APR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advertiser/Publisher Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>