force-app/main/default/objects/Advertiser_Publisher_Relationship__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advertiser/Brand</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Account selected must have a Record Type of Advertiser or Brand.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Advertiser, Brand</value>
        </filterItems>
        <infoMessage>The Account selected must have a Record Type of Advertiser.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rep Assignments (Advertiser/Brand)</relationshipLabel>
    <relationshipName>APR_Advertiser</relationshipName>
    <type>Lookup</type>
</CustomField>