force-app/main/default/objects/Advertiser_Publisher_Relationship__c/fields/Assigned_Rep__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rep_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>