force-app/main/default/objects/Advertiser_Publisher_Relationship__c/fields/Assigned_Rep_pl__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Rep_pl__c</fullName>
    <inlineHelpText>This will be a lookup. It&apos;s a picklist for now as we only have 2 licenses.</inlineHelpText>
    <label>Assigned Rep (temp)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andresa Strahm</fullName>
            </value>
            <value>
                <fullName>Chris Bateman</fullName>
            </value>
            <value>
                <fullName>Eric Anderson</fullName>
            </value>
            <value>
                <fullName>Leah Mindemann</fullName>
            </value>
            <value>
                <fullName>Peter Rupert</fullName>
            </value>
            <value>
                <fullName>Shane Ennenga</fullName>
            </value>
            <value>
                <fullName>Tom Bock</fullName>
            </value>
            <value>
                <fullName>Tom Schoen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>