force-app/main/default/objects/Advertiser_Publisher_Relationship__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publisher</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Account selected must have a Record Type of Publisher.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Publisher</value>
        </filterItems>
        <infoMessage>The Account selected must have a Record Type of Publisher.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advertiser Relationships</relationshipLabel>
    <relationshipName>APR_Publisher</relationshipName>
    <type>Lookup</type>
</CustomField>