force-app/main/default/objects/Advertiser_Publisher_Relationship__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actively Advertising</fullName>
            </value>
            <value>
                <fullName>Prospect - Rep Actively Working</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Do Not Call / Internal Publisher Account</fullName>
            </value>
            <value>
                <fullName>Classification in Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>