force-app/main/default/objects/Advertiser_Publisher_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Advertiser__c</columns>
    <columns>Publisher__c</columns>
    <columns>Owner__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>