force-app/main/default/objects/Advertiser_Publisher_Relationship__c/listViews/My_APRs.listView-meta.xml
<ListView>
    <fullName>My_APRs</fullName>
    <columns>NAME</columns>
    <columns>Advertiser__c</columns>
    <columns>Publisher__c</columns>
    <columns>Owner__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My APRs</label>
</ListView>